新增分钟作业，增加无依赖作业管理功能

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,7 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 #自定义参数
 #最大运行京城数
-max_run_cnt=7
+max_run_cnt=2
 #作业运行路径
 #prog_root=/home/hdfs/dssprog
 prog_root=/home/dw/prog/
@@ -44,6 +44,15 @@ prog_root=/home/dw/prog/
 10.36.1.32.thirddate_test.port=4000
 10.36.1.32.username=root
 10.36.1.32.password=ZHa7lXWBmA
+
+10.36.0.166.thirddata.port=4000
+10.36.0.166.username=ti_user
+10.36.0.166.password=rvqSfBiZJG
+
+10.36.1.27.risk.port=3306
+10.36.1.27.xedk.port=3306
+10.36.1.27.username=xd_data
+10.36.1.27.password=z353AxkrqY
 
 #thymelea模板配置
 spring.thymeleaf.prefix=classpath:/templates/
