sql全部改成小写

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.mysql.bi.username=etl
-spring.datasource.mysql.bi.password=Etl-123
+spring.datasource.mysql.bi.username=plat_dc
+spring.datasource.mysql.bi.password=NzBefuM9
 spring.datasource.mysql.bi.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.mysql.bi.url=jdbc:mysql://10.36.1.58:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.mysql.bi.url=jdbc:mysql://10.203.15.18:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.mysql.bi.default-auto-commit=true
 spring.datasource.mysql.bi.max-active=1000
 spring.datasource.mysql.bi.dbcp2.pool-prepared-statements=true
@@ -36,23 +36,14 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 
 #自定义参数
 #最大运行京城数
-max_run_cnt=2
+max_run_cnt=3
 #作业运行路径
 #prog_root=/home/hdfs/dssprog
-prog_root=/home/dw/prog/
+prog_root=/data/prog/
 #数据库连接信息 账号密码 ip+username|passwrod= 端口 ip+数据库+port=
-10.36.1.32.thirddate_test.port=4000
-10.36.1.32.username=root
-10.36.1.32.password=ZHa7lXWBmA
-
-10.36.0.166.thirddata.port=4000
-10.36.0.166.username=ti_user
-10.36.0.166.password=rvqSfBiZJG
-
-10.36.1.27.risk.port=3306
-10.36.1.27.xedk.port=3306
-10.36.1.27.username=xd_data
-10.36.1.27.password=z353AxkrqY
+#10.36.1.32.thirddate_test.port=4000
+#10.36.1.32.username=root
+#10.36.1.32.password=ZHa7lXWBmA
 
 #thymelea模板配置
 spring.thymeleaf.prefix=classpath:/templates/
