所有作业新增运行ip地址，并启用分布式锁来实现多台机器运行调度作业

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.datasource.mysql.bi.username=plat_dc
 spring.datasource.mysql.bi.password=NzBefuM9
 spring.datasource.mysql.bi.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.mysql.bi.url=jdbc:mysql://10.203.15.18:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.mysql.bi.url=jdbc:mysql://10.203.15.18:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.mysql.bi.url=jdbc:mysql://localhost:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.mysql.bi.default-auto-commit=true
 spring.datasource.mysql.bi.max-active=1000
 spring.datasource.mysql.bi.dbcp2.pool-prepared-statements=true
@@ -39,11 +40,13 @@ mybatis.mapper-locations=classpath:mapper/*Mapper.xml
 max_run_cnt=3
 #作业运行路径
 #prog_root=/home/hdfs/dssprog
-prog_root=/data/prog/
+#prog_root=/data/prog/
+prog_root=D:/home/
 #数据库连接信息 账号密码 ip+username|passwrod= 端口 ip+数据库+port=
 #10.36.1.32.thirddate_test.port=4000
 #10.36.1.32.username=root
 #10.36.1.32.password=ZHa7lXWBmA
+host_name=10.203.20.7
 
 #thymelea模板配置
 spring.thymeleaf.prefix=classpath:/templates/
@@ -54,3 +57,23 @@ spring.thymeleaf.content-type=text/html
 spring.thymeleaf.cache=false
 spring.resources.chain.strategy.content.enabled=true
 spring.resources.chain.strategy.content.paths=/**
+
+# redis配置
+# Redis数据库索引（默认为0）
+spring.redis.database=1
+# Redis服务器地址
+spring.redis.host=10.203.20.30
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
