--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.datasource.mysql.bi.username=plat_dc
 spring.datasource.mysql.bi.password=NzBefuM9
 spring.datasource.mysql.bi.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.mysql.bi.url=jdbc:mysql://10.203.15.18:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.mysql.bi.url=jdbc:mysql://10.203.15.18:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+#spring.datasource.mysql.bi.url=jdbc:mysql://localhost:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.mysql.bi.url=jdbc:mysql://10.200.53.16:3306/etl?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.mysql.bi.default-auto-commit=true
 spring.datasource.mysql.bi.max-active=1000
 spring.datasource.mysql.bi.dbcp2.pool-prepared-statements=true
